# baker-rust

./: APKBUILD  Cargo.toml  LICENSE  README.md  arch-index.html  index.html  root-69263073.rsa.pub  root-index.html
.github/workflows/: baker-rust-apk.yml
examples/: dev.cfg
scripts/: build-apk.sh
src/: cli.rs  commands.rs  logger.rs  main.rs  recipe.rs  repository.rs  secret.rs  settings.rs  storage.rs  template.rs  utils.rs
wolfi/: melange.yaml
