[package]
name = "baker-rust"
version = "0.1.0"
edition = "2021"
description = "Rust implementation of BakerCM"
license = "BSD-3-Clause"
repository = "https://github.com/arthurhoch/baker-rust"
homepage = "https://github.com/arthurhoch/baker-rust"
readme = "README.md"

[dependencies]
aes = "0.8"
eax = "0.5"
sha2 = "0.10"
rand_core = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["tls"] }
url = "=2.4.1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
